tests/cli_diagnostics/run_python_ffi_runner_output_limit.stderr.golden
tests/fixtures/run_python_ffi.curlee:2:12: error: python runner output too large
  |
  |   unsafe { python_ffi.call(); }
  |            ^^^^^^^^^^^^^^^^^
